2002-01-06  Raja R Harinath  <harinath@cs.umn.edu>

	* lib/am/configure.am (%MAKEFILE%): Pass `depfiles' to
	config.status.

2002-01-06  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Tags): Document new variables.
	* lib/am/tags.am (ETAGS): New macro.
	(ETAGSFLAGS): Likewise.
	(TAGS): Use them.

2002-01-04  Tom Tromey  <tromey@redhat.com>

	* configure.in (ACLOCAL): Set perllibdir.  From Nicolas Joly.

2002-01-04  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (read_am_file): Thinko in "comment following
	trailing backslash" detection.
	* tests/comment5.test: Test for this too.

2002-01-02  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Extending): Added index for uninstall-hook.

2002-01-02  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Fix for PR automake/278:
	* m4/python.m4 (AM_PYTHON_CHECK_VERSION): Use `sys.hexversion' to cope
	with versions such as '2.2c1'.  Also, use `int' instead of the
	obsoleted `string.atoi'.
	Reported by Enrico Scholz.

2001-01-02  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Fix for PR automake/280:
	* automake.in (read_am_file): Warn about trailing backslashes
	in comments.
	* tests/comment5.test: New file.
	* tests/Makefile.am (TESTS): Add comment5.test.
	Reported by Enrico Scholz.

2002-01-02  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/comment4.test: New file.
	* tests/Makefile.am (TESTS): Add comment4.test.

	Fix for comment4.test:
	* automake.in (read_am_file): Output leading comments only when
	encountering white lines.

2002-01-01  Tom Tromey  <tromey@redhat.com>

	For PR automake/234:
	* tests/Makefile.am (TESTS): Added strip.test.
	* tests/strip.test: New file.

	* automake.texi (Extending): Mention uninstall-hook.
	(Install): Likewise.
	* automake.in (handle_factored_dependencies): Allow
	uninstall-hook.

2002-01-01  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/install.am (install-strip): Set INSTALL_STRIP_FLAG=-s,
	it is needed by install-%DIR%LTLIBRARIES in ltlib.am.