@@ -1535,6 +1535,7 @@ sub handle_languages
 	{
 	    # Set location of depcomp.
 	    &define_variable ('depcomp', "\$(SHELL) $config_aux_dir/depcomp");
+	    &define_variable ('am__depfiles_maybe', 'depfiles');
 
 	    require_conf_file ("$am_file.am", FOREIGN, 'depcomp');
 
@@ -1567,6 +1568,7 @@ sub handle_languages
     else
     {
 	&define_variable ('depcomp', '');
+	&define_variable ('am__depfiles_maybe', '');
     }
 
     my %done;
