@@ -28,9 +28,9 @@
 
 ## This rule remakes the Makefile.
 %MAKEFILE%: %MAINTAINER-MODE% %MAKEFILE-IN% %MAKEFILE-DEPS% $(top_builddir)/config.status
-## FIXME: `depfiles' lets us re-run the rule to create the .P files.
-## Ideally we wouldn't have to do this by hand.
-	cd $(top_builddir) && $(SHELL) ./config.status %CONFIG-MAKEFILE% depfiles
+## FIXME: $(am__depfiles_maybe) lets us re-run the rule to create the
+## .P files.  Ideally we wouldn't have to do this by hand.
+	cd $(top_builddir) && $(SHELL) ./config.status %CONFIG-MAKEFILE% $(am__depfiles_maybe)
 
 
 
