@@ -1,5 +1,9 @@
 2002-01-06  Raja R Harinath  <harinath@cs.umn.edu>
 
+	* automake.in (handle_languages): Emit an automake
+        internal variable 'am__depfiles_maybe'.
+	* lib/am/configure.am (%MAKEFILE%): Use am__depfiles_maybe.
+
 	* lib/am/configure.am (%MAKEFILE%): Pass `depfiles' to
 	config.status.
 
